infra/k8s/client.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client

spec:
  replicas: 1

  selector:
    matchLabels:
      name: client

  template:
    metadata:
      name: client
      labels:
        name: client
    spec:
      containers:
        - name: client
          image: regmicmahesh/microsvc-client
          ports:
            - containerPort: 3000

---
apiVersion: v1
kind: Service

metadata:
  name: client-svc
spec:
  type: ClusterIP
  selector:
    name: client
  ports:
    - name: client
      protocol: TCP
      port: 3000
      targetPort: 3000
