infra/k8s/comments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: comments

spec:
  replicas: 1

  selector:
    matchLabels:
      name: comments

  template:
    metadata:
      name: comments
      labels:
        name: comments
    spec:
      containers:
        - name: comments
          image: regmicmahesh/microsvc-comments
          ports:
            - containerPort: 4001

---
apiVersion: v1
kind: Service

metadata:
  name: comments-svc
spec:
  type: ClusterIP
  selector:
    name: comments
  ports:
    - name: comments
      protocol: TCP
      port: 4001
      targetPort: 4001
