infra/k8s/event-bus.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: event-bus

spec:
  replicas: 1

  selector:
    matchLabels:
      name: event-bus

  template:
    metadata:
      name: event-bus
      labels:
        name: event-bus
    spec:
      containers:
        - name: event-bus
          image: regmicmahesh/microsvc-event-bus
          ports:
            - containerPort: 4005

---
apiVersion: v1
kind: Service

metadata:
  name: event-bus-svc
spec:
  type: ClusterIP
  selector:
    name: event-bus
  ports:
    - name: event-bus
      protocol: TCP
      port: 4005
      targetPort: 4005
