infra/k8s/moderation.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: moderation

spec:
  replicas: 1

  selector:
    matchLabels:
      name: moderation

  template:
    metadata:
      name: moderation
      labels:
        name: moderation
    spec:
      containers:
        - name: moderation
          image: regmicmahesh/microsvc-moderation
          ports:
            - containerPort: 4003

---
apiVersion: v1
kind: Service

metadata:
  name: moderation-svc
spec:
  type: ClusterIP
  selector:
    name: moderation
  ports:
    - name: moderation
      protocol: TCP
      port: 4003
      targetPort: 4003
