infra/k8s/query.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: query

spec:
  replicas: 1

  selector:
    matchLabels:
      name: query

  template:
    metadata:
      name: query
      labels:
        name: query
    spec:
      containers:
        - name: query
          image: regmicmahesh/microsvc-query
          ports:
            - containerPort: 4002

---
apiVersion: v1
kind: Service

metadata:
  name: query-svc
spec:
  type: ClusterIP
  selector:
    name: query
  ports:
    - name: query
      protocol: TCP
      port: 4002
      targetPort: 4002
