infra/k8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx

spec:
  rules:
    - host: posts.com
      http:
        paths:
          - path: /posts/create
            pathType: Exact
            backend:
              service:
                name: posts-svc
                port:
                  number: 4000

          - path: /posts/
            pathType: Prefix
            backend:
              service:
                name: comments-svc
                port:
                  number: 4001

          - path: /posts
            pathType: Exact
            backend:
              service:
                name: query-svc
                port:
                  number: 4002

          - path: /
            pathType: Prefix
            backend:
              service:
                name: client-svc
                port:
                  number: 3000
